ensure search items not being clipped off by bottom panel

--- a/src/css/PreviewCard.css
+++ b/src/css/PreviewCard.css
@@ -1,4 +1,5 @@
 .preview-container {
+    padding-top: 10px;
     width: 100%;
     height: auto;
     justify-content: center;
